ui(richtext): fix toolbar z-index (#325)
* ui(richtext): fix toolbar z-index

* ui(Toolbar): remove z-index from toolbar

--- a/src/assets/css/new/components/rich-field.less
+++ b/src/assets/css/new/components/rich-field.less
@@ -25,6 +25,8 @@
         padding: 4px 4px 4px 1px !important;
         transition: border-color 0.2s;
         min-height: 200px;
+        position: relative;
+        z-index: 2;
 
         @media @mobiles {
             margin-top: 4px;
